[package]
name = "contacts"
version = "0.0.1"
authors = ["phil <uniphil@gmail.com>"]

[dependencies]
chrono = "0.3"
dotenv = "0.8.0"
lazy_static = "0.2.8"
r2d2 = "0.7.2"
r2d2-diesel = "0.13"
reqwest = "0.6.0"
rocket = "0.2"
rocket_codegen = "0.2.6"
serde = "0.9"
serde_derive = "0.9"

[dependencies.rocket_contrib]
version = "0.2"
default-features = false
features = ["tera_templates", "uuid"]

[dependencies.diesel]
version = "0.13"
features = ["postgres", "uuid", "chrono"]

[dependencies.diesel_codegen]
version = "0.13"
features = ["postgres"]

[dependencies.uuid]
version = "0.4"
features = ["v4"]
