[package]
name = "contacts"
version = "0.0.1"
authors = ["phil <uniphil@gmail.com>"]

[dependencies]
dotenv = "0.8.0"
lazy_static = "0.2.8"
postgres-derive = "0.3"
r2d2 = "0.7.2"
r2d2_postgres = "0.12"
reqwest = "0.5"
rocket = "0.2"
rocket_codegen = "0.2.6"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

[dependencies.chrono]
version = "0.3"
features = ["serde"]

[dependencies.postgres]
version = "0.14"
features = ["with-chrono", "with-uuid"]

[dependencies.rocket_contrib]
version = "0.2"
default-features = false
features = ["tera_templates", "uuid"]

[dependencies.uuid]
version = "0.4"
features = ["v4", "serde"]
